# autoget

./: .gitignore
.github/: dependabot.yml
.github/workflows/: ci.yml  test-on-pr.yml  test-on-push.yml
apis/: apis.yaml
backend/: go.mod  go.sum
backend/.clinerules/: go-unit-tests.md
backend/cmd/: main.go
backend/cmd/daemon/: main.go
backend/downloaders/: structs.go
backend/downloaders/config/: config.go
backend/downloaders/transmission/: client.go  client_test.go
backend/example/: config.example.yaml
backend/indexers/: doc.go  rss.go  rss_test.go  structs.go
backend/indexers/mteam/: api.go  api_test.go  download.go  list_resources.go  resource_detail.go  rss.go  rss_test.go
backend/indexers/nyaa/: nyaa.go  nyaa_test.go  rss.go
dev/: Caddyfile
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/.clinerules/: project.md
frontend/src/: app.ts  context.ts  index.css  my-element.ts  router.ts
organizer/: go.mod  go.sum
organizer/file-organizer/: .gitignore  README.md  justfile  main.py  pyproject.toml
organizer/file-organizer/.clinerules/: doc.md
organizer/file-organizer/app/: main.py  test_main.py
organizer/file-organizer/app/agents/: __init__.py  categorizer.py  mcp_tools.py  models.py  movie_mover.py  organizer.py  runner.py  tv_series_mover.py
organizer/file-organizer/app/agents/utils/: test_utils.py  utils.py
organizer/jav-actor/: README.md  go.mod  go.sum  justfile
prompts/: 1-init-project.md  2-backend-config.md  3-backend-main.md  4-backend-get-indexers.md
(+62 files in other folders)
